--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <section class="section">
             <h2 class="text-2xl font-semibold text-blue-700 border-b border-gray-300 pb-1 mb-3">Professional Summary</h2>
             <p class="mb-4">
-                Results-driven Solutions Architect and Project Manager with over 20 years of experience in designing, implementing, and optimizing enterprise-level solutions. Proven track record of increasing performance, reducing costs, and introducing innovative technologies like AI and machine learning, including spearheading highly visible open-source projects. Skilled in managing technical teams and creating roadmaps for digital transformation.
+                Results-driven Solutions Architect and Project Manager with over 20 years of experience in designing, implementing, and optimizing enterprise-level solutions. Proven track record of increasing performance, reducing costs, and introducing innovative technologies like AI and machine learning, including spearheading highly visible open-source projects. Driven by a deep passion for technology and innovation, consistently embraces complex challenges as opportunities to push boundaries and demonstrate the transformative potential of technology. Skilled in managing technical teams and creating roadmaps for digital transformation.
             </p>
             
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-4">
