--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="timeline-item">
                 <div class="flex flex-col md:flex-row justify-between">
                     <h3 class="text-xl font-semibold">Solutions Architect</h3>
-                    <p class="font-medium text-gray-600">Jun 2012 – Present (concurrent)</p>
+                    <p class="font-medium text-gray-600">Jun 2012 – Apr 2014</p>
                 </div>
                 <p class="text-blue-600 italic mb-2">24/7 International - UNILAB</p>
                 <ul class="pl-1 mt-2">
